--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.gitmessage.txt
 
 ### STS ###
 .apt_generated
@@ -35,3 +36,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Database
+application-database.yml
