--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 	// selenium
 	implementation 'org.seleniumhq.selenium:selenium-java:4.14.1'
+	// json
+	implementation 'org.json:json:20201115'
 
 	// Swagger
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
