feat : 카카오 로그인 사용자 정보 조회를 위한 임시 유틸 및 yml 파일 정보 추가 dajeongdev A minute ago

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,10 @@ out/
 ### VS Code ###
 .vscode/
 
+### YML files ###
 # Database
 application-database.yml
-
 # Naver Token
 application-naver-token.yml
+# OAuth2 & JWT
+application-security.yml
