refactor : 마이페이지 취향 선택 시 validation 추가

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
 }
 
 tasks.named('test') {
