--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,22 +40,34 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
-      # 빌드한 jar를 도커 이미지로 빌드하고 도커 허브에 푸시
-      - name: Set up Docker build and push
-        run: |
-          docker login -u ${{ secrets.NCP_ACCESS_KEY }} -p ${{ secrets.NCP_SECRET_KEY }}
-          docker build -t ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote .
-          docker push ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote
+      # Docker Buildx 설치
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to NCP Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
+          username: ${{ secrets.NCP_ACCESS_KEY }}
+          password: ${{ secrets.NCP_SECRET_KEY }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}//tag-name:latest
+          cache-from: type=registry,ref=${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
+          cache-to: type=inline
           
 
   deploy:
-    # needs를 통해 build job이 수행 성공시에 작업되도록 설정
+    name: Connect server ssh and pull from container registry
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      # NCP 로그인 / docker image pull & run
-      - name: NCP login and docker image pull and run
+      - name: Connect ssh
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.NCP_HOST }}
@@ -63,10 +75,9 @@ jobs:
           password: ${{ secrets.NCP_PASSWORD }}
           port: ${{ secrets.NCP_PORT }}
           script: |
-            sudo docker login -u ${{ secrets.NCP_ACCESS_KEY }} -p ${{ secrets.NCP_SECRET_KEY }}
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker rm -f $(sudo docker ps -a -q)
-            sudo docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote
-            sudo docker run -d -p 8009:8009 ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote
-            sudo docker image prune -f
+            docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name
+            docker stop $(docker ps -a -q)
+            docker rm $(docker ps -a -q)
+            docker run -d -p 8009:8009 ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name
+            docker image prune -f
             ps -ef | grep
