--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,24 +41,11 @@ jobs:
         run: ./gradlew clean build -x test
 
       # Docker Buildx 설치
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to NCP Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
-          username: ${{ secrets.NCP_ACCESS_KEY }}
-          password: ${{ secrets.NCP_SECRET_KEY }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote:latest
-          cache-from: type=registry,ref=${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote:latest
-          cache-to: type=inline
+      - name: web docker build and push
+        run: |
+          docker login -u ${{ secrets.NCP_ACCESS_KEY }} -p ${{ secrets.NCP_SECRET_KEY }}
+          docker build -t ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker .
+          docker push ${{ secrets.DOCKER_REPO }}/americanote_docker
           
 
   deploy:
@@ -66,6 +53,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
 
+    # Access Server & Docker compose up
     steps:
       - name: Connect ssh
         uses: appleboy/ssh-action@master
@@ -75,8 +63,8 @@ jobs:
           password: ${{ secrets.NCP_PASSWORD }}
           port: ${{ secrets.NCP_PORT }}
           script: |
-            docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote
-            docker stop $(docker ps -a -q)
-            docker rm $(docker ps -a -q)
-            docker run -d -p 8009:80 --name americanote_docker ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote
+            sudo docker rm -f $(docker ps -a -q)
+            sudo docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
+            sudo docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_nginx
+            docker-compose up -d
             docker image prune -f
