--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,25 @@ jobs:
         run: ./gradlew clean build -x test
 
       # Docker Buildx 설치
-      - name: web docker build and push
-        run: |
-          docker login -u ${{ secrets.NCP_ACCESS_KEY }} -p ${{ secrets.NCP_SECRET_KEY }}
-          docker build -t ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker .
-          docker push ${{ secrets.DOCKER_REPO }}/americanote_docker
-          
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to NCP Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
+          username: ${{ secrets.NCP_ACCESS_KEY }}
+          password: ${{ secrets.NCP_SECRET_KEY }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
+          cache-from: type=registry,ref=${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
+          cache-to: type=inline
+
 
   deploy:
     name: Connect server ssh and pull from container registry
