--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build:
-    name: Push to NCP container registry
-    runs-on: ubuntu-latest
+
+    runs-on: self-hosted
 
     steps:
       # checkout
@@ -40,44 +40,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
-      # Docker Buildx 설치
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to NCP Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
-          username: ${{ secrets.NCP_ACCESS_KEY }}
-          password: ${{ secrets.NCP_SECRET_KEY }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
-          cache-from: type=registry,ref=${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
-          cache-to: type=inline
-
-
-  deploy:
-    name: Connect server ssh and pull from container registry
-    needs: build
-    runs-on: ubuntu-latest
-
-    # Access Server & Docker compose up
-    steps:
-      - name: Connect ssh
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.NCP_HOST }}
-          username: ${{ secrets.NCP_USERNAME }}
-          password: ${{ secrets.NCP_PASSWORD }}
-          port: ${{ secrets.NCP_PORT }}
-          script: |
-            sudo docker rm -f $(docker ps -a -q)
-            sudo docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_docker
-            sudo docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/americanote_nginx
-            docker-compose up -d
-            docker image prune -f
+      # Jar 파일 실행
+      - name: Execute Jar File
+        run: sudo kill -9 `sudo lsof -t -i:8009` & sudo java -jar /actions-runner/_work/Americanote/build/libs/americano-0.0.1-SNAPSHOT.jar &
