fix : jar 파일 실행 경로 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,10 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
+      # 빌드 폴더에 접근
+      - name: Enter build file
+        run: cd build/libs
+
       # Jar 파일 실행
       - name: Execute Jar File
-        run: sudo kill -9 `sudo lsof -t -i:8009` & sudo java -jar /actions-runner/_work/Americanote/Americanote/build/libs/americano-0.0.1-SNAPSHOT.jar &
+        run: sudo kill -9 `sudo lsof -t -i:8009` & sudo nohup java -jar americano-0.0.1-SNAPSHOT.jar &
