--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,4 @@ jobs:
 
       # Jar 파일 실행
       - name: Execute Jar File
-        run: sudo java -jar build/libs/americano-0.0.1-SNAPSHOT.jar &
+        run: nohup java -jar build/libs/americano-0.0.1-SNAPSHOT.jar 1>nohup/stdout.txt 2>nohup/stderr.txt
