fix : 출력과 에러 로그 분리 및 경로 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,4 @@ jobs:
 
       # Jar 파일 실행
       - name: Execute Jar File
-        run: nohup java -jar build/libs/americano-0.0.1-SNAPSHOT.jar 1>nohup/stdout.txt 2>nohup/stderr.txt
+        run: nohup java -jar build/libs/americano-0.0.1-SNAPSHOT.jar 1>/root/nohup/output.log 2>error.log &
